--- a/TRMDataManager/Web.config
+++ b/TRMDataManager/Web.config
@@ -12,7 +12,9 @@
     <add name="EFData" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\EFData.mdf;Initial Catalog=EFData;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="TRMData" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=TRMData;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="taxRate" value="8.75"/>
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
